--- a/m/mi/mid/midwestliving.com.html
+++ b/m/mi/mid/midwestliving.com.html
@@ -1,23 +1,14 @@
-<!--The following is the downloaded HTML source of the midwestliving.com privacy policy that was archived on 2001-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011214090823id_/http%3A//midwestliving.com/mwl/file.jhtml%3Fitem%3D/legal/privacy%26temp%3Dno) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the midwestliving.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602141640id_/http%3A//www.midwestliving.com/mwl/file.jhtml%3Fitem%3D/legal/privacy%26temp%3Dno) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 
 </head>
 
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-
-
-
-
-
-	
-	<!-- Start SuperStats tracking code version 3.1. Copyright 1997-2001 MyComputer.com, Inc. More info available at http://www.mycomputer.com -->
+<!-- Start SuperStats tracking code version 3.1. Copyright 1997-2001 MyComputer.com, Inc. More info available at http://www.mycomputer.com -->
 <script language="JavaScript">
 /* You may give each page an identifying name, server, and channel on the next lines. */
-
-
-
 /* You may give each page an identifying name, server, and channel on the next lines. */
 var pageName;if(!pageName)pageName="/mwl/file.jhtml?item=/legal/privacy&amp;temp=no"
 var server;if(!server)server="www.midwestliving.com"
@@ -27,8 +18,6 @@ var pageValue;if(!pageValue)pageValue=""
 var product;if(!product)product=""
 var prop1;if(!prop1)prop1="";var prop2;if(!prop2)prop2="";var prop3;if(!prop3)prop3="";var prop4;if(!prop4)prop4=""
 var prop5;if(!prop5)prop5=""
-
-
 /**** DO NOT ALTER ANYTHING BELOW THIS LINE! ****/
 function mc_escape(s){var ch;s=escape(s)
 while((ch=s.indexOf('+'))>0)s=s.substr(0,ch)+'%2B'+s.substr(ch+1,s.length)
@@ -69,7 +58,7 @@ while((i1<navigator.plugins.length)&&(i2<30)){sta=navigator.plugins[i1].name
 if(sta.length>100)sta=sta.substring(0,100);sta+=';'
 if(p.indexOf(sta)==-1)p+=sta;i1++;i2++}
 var v=(navigator.javaEnabled()?'Y':'N')
-}code='<im'+'g src="http://mwl.112.2O7.net/b/ss/mwl/1/31/'+mc_s+'?[AQB]r='+mc_escape(r)+'&s='+mc_escape(s)+'&c='+mc_escape(c)+'&o='+mc_escape(o)+'&j='+j+'&v='+v+'&k='+k+'&bw='+bw+'&bh='+bh+'&t='+mc_escape(t)+'&pageName='+mc_escape(pageName)+'&server='+mc_escape(server)+'&ch='+mc_escape(channel)+'&pageType='+mc_escape(pageType)+'&pageValue='+mc_escape(pageValue)+'&product='+mc_escape(product)+'&c1='+mc_escape(prop1)+'&c2='+mc_escape(prop2)+'&c3='+mc_escape(prop3)+'&c4='+mc_escape(prop4)+'&c5='+mc_escape(prop5)+'&g='+mc_escape(g)+'&a='+mc_escape(a)+'&p='+mc_escape(p)+'[AQE]'+'" height=1 width=1 border=0>'
+}code='<im'+'g src="http://mwl.112.2O7.net/b/ss/mwl/1/31/'+mc_s+'?[AQB]r='+mc_escape(r)+'&s='+mc_escape(s)+'&c='+mc_escape(c)+'&o='+mc_escape(o)+'&j='+j+'&v='+v+'&k='+k+'&bw='+bw+'&bh='+bh+'&t='+mc_escape(t)+'&pageName='+mc_escape(pageName)+'&server='+mc_escape(server)+'&ch='+mc_escape(channel)+'&pageType='+mc_escape(pageType)+'&pageValue='+mc_escape(pageValue)+'&product='+mc_escape(product)+'&c1='+mc_escape(prop1)+'&c2='+mc_escape(prop2)+'&c3='+mc_escape(prop3)+'&c4='+mc_escape(prop4)+'&c5='+mc_escape(prop5)+'&g='+mc_escape(g)+'&a='+mc_escape(a)+'&p='+mc_escape(p)+'[AQE]'+'" height=1 width=1 border=0 align=right>'
 if(!mc_noe)document.write(code)
 
 return code}var mc_n=navigator,mc_apn=mc_n.appName,mc_w=mc_n.appVersion,mc_apv,mc_i
@@ -82,26 +71,19 @@ function mc_et(){window.onerror=window.oe;return true}var mc_noe=false;var mcr_d
 if(!mcr_done){if(navigator.userAgent.indexOf('Mac')>=0&&navigator.userAgent.indexOf('MSIE 4')>=0){var mc_r=document.referrer;mc_noe=true}
 else{window.oe=window.onerror;window.onerror=mc_et;var mc_r=parent.document.referrer;mc_noe=mc_et()}}
 </script><script language="JavaScript">
-document.write(mc_mkcd());document.write('<'+'!-- ') </script><img src="http://mwl.112.2O7.net/b/ss/mwl/1/31/9fsi1580468466287?[AQB]r=NULL&amp;s=800x600&amp;c=24&amp;o=Linux%20x86_64&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;t=31%2F0%2F2020%2011%3A1%3A6%205%200&amp;pageName=/mwl/file.jhtml%3Fitem%3D/legal/privacy%26amp%3Btemp%3Dno&amp;server=www.midwestliving.com&amp;ch=&amp;pageType=&amp;pageValue=&amp;product=&amp;c1=&amp;c2=&amp;c3=&amp;c4=&amp;c5=&amp;g=https%3A%2F%2Fweb.archive.org%2Fweb%2F20011214090823id_%2Fhttp%253A%2F%2Fmidwestliving.com%2Fmwl%2Ffile.jhtml%253Fitem%253D%2Flegal%2Fprivacy%2526temp%253Dno&amp;a=Netscape%205&amp;p=[AQE]" height="1" width="1" border="0"><!-- <noscript><img
+document.write(mc_mkcd());document.write('<'+'!-- ') </script><img src="http://mwl.112.2O7.net/b/ss/mwl/1/31/9fsi1580468465225?[AQB]r=NULL&amp;s=800x600&amp;c=24&amp;o=Linux%20x86_64&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;t=31%2F0%2F2020%2011%3A1%3A5%205%200&amp;pageName=/mwl/file.jhtml%3Fitem%3D/legal/privacy%26amp%3Btemp%3Dno&amp;server=www.midwestliving.com&amp;ch=&amp;pageType=&amp;pageValue=&amp;product=&amp;c1=&amp;c2=&amp;c3=&amp;c4=&amp;c5=&amp;g=https%3A%2F%2Fweb.archive.org%2Fweb%2F20020602141640id_%2Fhttp%253A%2F%2Fwww.midwestliving.com%2Fmwl%2Ffile.jhtml%253Fitem%253D%2Flegal%2Fprivacy%2526temp%253Dno&amp;a=Netscape%205&amp;p=[AQE]" height="1" width="1" border="0" align="right"><!-- <noscript><img
 src="http://mwl.112.2O7.net/b/ss/mwl/1"
  height=1 width=1 border=0></noscript>
 <script language="JavaScript">
 document.write(' --'+'>')
 </script> <!-- End SuperStats tracking code. -->
-
-
-
-
-
-
-
 <table width="760" border="0" cellspacing="0" cellpadding="0">
 
 	<tbody><tr><td>&nbsp;</td></tr>
 	
 	<tr>
 		<td width="760" align="center">
-			
+
 
 <title>Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -196,7 +178,7 @@ if (aol) {
     <table border="0" cellpadding="0" cellspacing="0" width="580">
       <tbody><tr>
         <td width="430"><font size="2"><strong>
-          </strong></font><p align="center"><font size="2"><strong><img src="http://a953.g.akamai.net/f/953/5053/4h/images.meredith.com/mwl/images/09/a_mwllogo.gif" width="468" height="57" alt="BHG.COM" border="0">
+          </strong></font><p align="center"><font size="2"><strong><img src="http://images.meredith.com/mwl/images/09/a_mwllogo.gif" width="468" height="57" alt="BHG.COM" border="0">
           </strong></font></p></td>
       </tr>
       <tr>
@@ -210,7 +192,7 @@ if (aol) {
           has been committed to providing our customers with products and services
           characterized by outstanding quality, customer service and value. Our
           Online Privacy Policy continues our commitment to serve you and to protect
-          your privacy online.</font>
+          your privacy online. PLEASE NOTE THAT OUR PRIVACY POLICY APPLIES ONLY TO OUR <u>ONLINE</u> COLLECTION AND USE OF INFORMATION.</font>
           <p><font face="Arial, Helvetica, sans-serif">Please read this Privacy
             Policy carefully so that you understand our privacy practices regarding:</font></p>
           <ul>
@@ -291,20 +273,8 @@ if (aol) {
             accepting cookies or to disable cookies entirely. However, if you
             don’t accept cookies, you won’t be able to take advantage of various
             features on our sites that are available to other visitors. In addition,
-            our advertising and marketing partners may use their own cookies.
-            We use the services of a third-party advertising company to serve
-            and target advertisements that you see on the pages of our sites and
-            to serve and target promotions or other marketing messages. This advertising
-            company also collects "clickstream data," information about your visit
-            to our site and to other sites, that can be aggregated and used to
-            target advertising on this and other sites, and used for marketing
-            research and other similar purposes. This clickstream data does not
-            include personally identifying information such as your name, address,
-            email address or telephone number. This advertising company uses cookies
-            for many of the same reasons we do, and collects information directly
-            from our users. If you would like to know more about its information
-            gathering practice and "opt-out" procedures, please see
-            the privacy statement on the DoubleClick website (<a href="http://www.doubleclick.net/us/corporate/privacy/default.asp?asp_object_1=&amp;">http://www.doubleclick.net/us/corporate/privacy/default.asp?asp_object_1=&amp;</a>).</font></p>
+            our advertising and marketing partners may use their own cookies.</font></p><font face="Arial, Helvetica, sans-serif">
+            </font><p><font face="Arial, Helvetica, sans-serif">We use the services of a third-party advertising and email delivery company to serve and target advertisements that you see on the pages of our sites and to serve and target promotions or other marketing messages and to send e-mails from us. This advertising company also collects "clickstream data," information about your visit to our site and to other sites, that can be aggregated and used to target advertising on this and other sites, and used for marketing research and other similar purposes. This clickstream data does not include personally identifying information such as your name, address, email address or telephone number. This advertising company uses cookies for many of the same reasons we do, and collects information directly from our users. We share web site usage information about visitors to our web site, who have received a targeted promotional campaign, with this advertising company for the purpose of targeting future campaigns and upgrading visitor information used in reporting statistics. For this purpose, we and our third-party advertising company note some of the pages you visit on our web site through the use of pixel tags (also called clear gifs). If you would like to know more about its information gathering practice and "opt-out" procedures, please see the privacy statement on the DoubleClick website (<a href="http://www.doubleclick.net/us/corporate/privacy/default.asp?asp_object_1=&amp;">http://www.doubleclick.net/us/corporate/privacy/default.asp?asp_object_1=&amp;</a>).</font></p>
           <p><font face="Arial, Helvetica, sans-serif">When you use our sites,
             we may also collect your browser type, access time, and/or Internet
             Protocol ("IP") address, and keep records of this information.
@@ -450,6 +420,4 @@ if (aol) {
 
 
 
-
-	
 </body></html>
