--- a/c/cl/cla/clarkhoward.com.html
+++ b/c/cl/cla/clarkhoward.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the clarkhoward.com privacy policy that was archived on 2001-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011211185416id_/http%3A//clarkhoward.com/clarkhoward/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the clarkhoward.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603150909id_/http%3A//clarkhoward.com/clarkhoward/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 
@@ -104,7 +104,7 @@ if (!ver4) event = null;
 	<td width="150" valign="bottom">
 	<span style="font-size: 8pt; text-decoration: underline; font-family: Arial, Helvetica, sans-serif;">
 	
-<form class="tb" method="post" action="/cgi-bin/search/htsearch">
+<form class="tb" method="post" action="/cgi-bin/htdig/htsearch">
 <input type="hidden" name="config" value="clark">
 <input type="hidden" name="restrict" value="clarkhoward.com">
 <input type="hidden" name="exclude" value="">
@@ -175,28 +175,26 @@ if (!ver4) event = null;
 <br>
 	<table bgcolor="#000000" width="150" cellspacing="0" cellpadding="1" border="0" align="center"><tbody><tr><td width="150" align="center"><table bgcolor="#FFFFFF" width="148" cellspacing="0" cellpadding="0" border="0" align="center"><tbody><tr><td width="148" valign="top" class="size">
 <table align="center" width="100%" cellspacing="0" cellpadding="0"><tbody><tr><td valign="top" width="148" bgcolor="#99cccc" class="size"><font size="-1" face="arial,helvetica" color="#000000">
-<b>Miss something?</b></font></td></tr><tr><td bgcolor="#ffcc99"><img src="/templates/spacer.gif" width="145" height="5"></td></tr><tr><td valign="top" class="size" bgcolor="#ffffff"><table width="150" cellpadding="2" border="0">
-<tbody><tr><td width="150">
-Our <a href="/clarkhoward/miss_something.html">Quick Cuts Menu</a> tells you how to find what you're looking for.  
+<b>Miss something?</b></font></td></tr><tr><td bgcolor="#ffcc99"><img src="/templates/spacer.gif" width="145" height="5"></td></tr><tr><td valign="top" class="size" bgcolor="#ffffff">
+<table width="150" cellpadding="2" cellspacing="2" border="0">
+<tbody><tr><td width="150"> Having trouble finding your way around the site? Our <a href="/clarkhoward/miss_something.html">Quick Cuts Menu</a> will take you where you want to go!
 </td></tr></tbody></table>
 
 
 
 </td></tr></tbody></table></td></tr></tbody></table></td></tr></tbody></table>
-
 <p></p><p>
-
-
 <table bgcolor="#000000" width="150" cellspacing="0" cellpadding="1" border="0" align="center"><tbody><tr><td width="150" align="center"><table bgcolor="#FFFFFF" width="148" cellspacing="0" cellpadding="0" border="0" align="center"><tbody><tr><td width="148" valign="top" class="size">
 <table align="center" width="100%" cellspacing="0" cellpadding="0"><tbody><tr><td valign="top" width="148" bgcolor="#99cccc" class="size"><font size="-1" face="arial,helvetica" color="#000000">
-<b> Listen to Clark</b></font></td></tr><tr><td bgcolor="#ffcc99"><img src="/templates/spacer.gif" width="145" height="5"></td></tr><tr><td valign="top" class="size" bgcolor="#ffffff">
+<b>&nbsp;Listen to Clark</b></font></td></tr><tr><td bgcolor="#ffcc99"><img src="/templates/spacer.gif" width="145" height="5"></td></tr><tr><td valign="top" class="size" bgcolor="#ffffff">
  
 <p></p><table width="150" cellpadding="2" border="0">
 <tbody><tr><td width="150">
-Listen live to Clark Howard's <a href="http://www.streamaudio.com/listen/cox.asp?station=clkh_ir">nationally-syndicated show</a> from 1 to 4pm EST.  Or, listen to his <a href="http://www.streamaudio.com/listen/cox.asp?station=wsb_am">local show</a> in Atlanta from 1 to 6pm<br>
+Listen to Clark's <a href="http://www.streamaudio.com/listen/cox.asp?station=wsb_am">local show</a> in Atlanta from 1 to 6pm EST.<br>
 <!--• <a href="http://clarkhoward.com/clarkhoward/audio_archive.html">Archived shows</a><Br>-->
 •  <a href="/clarkhoward/listen_help.html">Trouble listening?<br></a>
-</td></tr></tbody></table></td></tr></tbody></table></td></tr></tbody></table></td></tr></tbody></table>
+</td></tr></tbody></table>
+</td></tr></tbody></table></td></tr></tbody></table></td></tr></tbody></table>
 	<br>
 	
 	 
@@ -282,30 +280,13 @@ Cox Radio respects the privacy of visitors to our site. Please read this Privacy
 
 	<font face="arial,helvetica" size="1">Advertisement</font><br>
 
-	
-
-	
-<a href="http://ad.doubleclick.net/jump/cxri.clarkhoward.text/clarkhoward;rr=1;pg=clarkhoward;mkt=(none);sz=140x60;tile=1;ord=PBZWWgoAAHIAABKjT90?"><img src="http://ad.doubleclick.net/ad/cxri.clarkhoward.text/clarkhoward;rr=1;pg=clarkhoward;mkt=(none);sz=140x60;tile=1;ord=PBZWWgoAAHIAABKjT90?" height="60" width="140" border="0"></a>
-<br>
-<a href="http://ad.doubleclick.net/jump/cxri.clarkhoward.text/clarkhoward;rr=3;pg=clarkhoward;mkt=(none);sz=140x60;tile=3;ord=PBZWWgoAAHIAABKjT90?"><img src="http://ad.doubleclick.net/ad/cxri.clarkhoward.text/clarkhoward;rr=3;pg=clarkhoward;mkt=(none);sz=140x60;tile=3;ord=PBZWWgoAAHIAABKjT90?" height="60" width="140" border="0"></a>
-<br clear="all">
-
-
-
-
-
-
-
-
-
-	<br>
 
 
 <nolayer>
  
-<iframe src="http://ad.doubleclick.net/adi/cxri.clarkhoward/clarkhoward;pg=clarkhoward;mkt=atl;sz=120x90;tile=7;ord=PBZWWgoAAHIAABKjT90?" width="120" height="90" frameborder="0" border="0" marginheight="0" marginwidth="0" scrolling="no">
+<iframe src="http://ad.doubleclick.net/adi/cxri.clarkhoward/clarkhoward;pg=/clarkhoward/privacy_policy.html;mkt=atl;sz=120x90;tile=7;ord=PPuGkwoAAHAAAG6XOwg?" width="120" height="90" frameborder="0" border="0" marginheight="0" marginwidth="0" scrolling="no">
  
-<a href="http://ad.doubleclick.net/jump/cxri.clarkhoward/clarkhoward;pg=clarkhoward;mkt=atl;sz=120x90;tile=7;ord=PBZWWgoAAHIAABKjT90?"><img src="http://ad.doubleclick.net/ad/cxri.clarkhoward/clarkhoward;pg=clarkhoward;mkt=atl; sz=120x90;tile=7;ord=PBZWWgoAAHIAABKjT90?" height=90 width=120 border=0></A>
+<a href="http://ad.doubleclick.net/jump/cxri.clarkhoward/clarkhoward;pg=/clarkhoward/privacy_policy.html;mkt=atl;sz=120x90;tile=7;ord=PPuGkwoAAHAAAG6XOwg?"><img src="http://ad.doubleclick.net/ad/cxri.clarkhoward/clarkhoward;pg=/clarkhoward/privacy_policy.html;mkt=atl; sz=120x90;tile=7;ord=PPuGkwoAAHAAAG6XOwg?" height=90 width=120 border=0></A>
  
 </iframe>
 
@@ -324,8 +305,10 @@ Cox Radio respects the privacy of visitors to our site. Please read this Privacy
 	<table bgcolor="#000000" width="150" cellspacing="0" cellpadding="1" border="0" align="center"><tbody><tr><td width="150" align="center"><table bgcolor="#FFFFFF" width="148" cellspacing="0" cellpadding="0" border="0" align="center"><tbody><tr><td width="148" valign="top" class="size">
 <table align="center" width="100%" cellspacing="0" cellpadding="0"><tbody><tr><td valign="top" width="148" bgcolor="#99cccc" class="size"><font size="-1" face="arial,helvetica" color="#000000">
 <b>Clark's Shortcuts</b></font></td></tr><tr><td bgcolor="#ffcc99"><img src="/templates/spacer.gif" width="145" height="5"></td></tr><tr><td valign="top" class="size" bgcolor="#ffffff">
-<table width="150" cellpadding="2" border="0"><tbody><tr><td width="150">• <a href="/advice/book_signings.html">Book signings</a><br>
-• <a href="http://partners2.financenter.com/consumer/all_homes.fcs">Calculators</a><br>
+<table width="150" cellpadding="2" border="0"><tbody><tr><td width="150">
+• <a href="/advice/book_signings.html"><font color="red">Book signings</font></a><br>
+• <a href="/advice/books/index.html"><font color="red">Get Clark's books</font></a><br>
+• <a href="http://www.bankrate.com/brm/rate/calc_home.asp">Calculators</a><br>
 • <a href="/topics/cellphones.html">Cell phone rates</a><br>
 • <a href="/topics/internet_deals.html">Internet Deals</a><br>
 •  <a href="/topics/long_distance.html">Long distance</a><br>
@@ -379,9 +362,9 @@ Cox Radio respects the privacy of visitors to our site. Please read this Privacy
 
 
 	<nolayer>
-  <iframe src="http://ad.doubleclick.net/adi/cxri.clarkhoward/clarkhoward;pg=clarkhoward;mkt=atl;sz=468x60;tile=7;ord=PBZWWgoAAHIAABKjT90?" width="468" height="60" frameborder="0" border="0" marginheight="0" marginwidth="0" scrolling="no">
+  <iframe src="http://ad.doubleclick.net/adi/cxri.clarkhoward/clarkhoward;pg=/clarkhoward/privacy_policy.html;mkt=atl;sz=468x60;tile=7;ord=PPuGkwoAAHAAAG6XOwg?" width="468" height="60" frameborder="0" border="0" marginheight="0" marginwidth="0" scrolling="no">
  
-<a href="http://ad.doubleclick.net/jump/cxri.clarkhoward/clarkhoward;pg=clarkhoward;mkt=atl;sz=468x60;tile=7;ord=PBZWWgoAAHIAABKjT90?"><img src="http://ad.doubleclick.net/ad/cxri.clarkhoward/clarkhoward;pg=clarkhoward;mkt=atl; sz=468x60;tile=7;ord=PBZWWgoAAHIAABKjT90?" height=60 width=468 border="0"></A>
+<a href="http://ad.doubleclick.net/jump/cxri.clarkhoward/clarkhoward;pg=/clarkhoward/privacy_policy.html;mkt=atl;sz=468x60;tile=7;ord=PPuGkwoAAHAAAG6XOwg?"><img src="http://ad.doubleclick.net/ad/cxri.clarkhoward/clarkhoward;pg=/clarkhoward/privacy_policy.html;mkt=atl; sz=468x60;tile=7;ord=PPuGkwoAAHAAAG6XOwg?" height=60 width=468 border="0"></A>
  
 </iframe>
 
@@ -416,7 +399,7 @@ Cox Radio respects the privacy of visitors to our site. Please read this Privacy
 
 <a href="/index.html">Home</a> |
 
-<a href="http://www.streamaudio.com/listen/cox.asp?station=wsb_am">Listen</a> | 
+<a href="http://www.streamaudio.com/listen/cox.asp?station=clkh_ir">Listen</a> | 
 
 <a href="/shownotes/index.html">Show Notes</a> | 
 
@@ -462,7 +445,7 @@ Technical problems?</a> </font>
 
 
 
-<layer src="http://ad.doubleclick.net/adl/cxri.clarkhoward/clarkhoward;pg=clarkhoward;mkt=atl;sz=468x60;tile=7;ord=PBZWWgoAAHIAABKjT90?" width="468" height="60" visibility="hidden" onload="moveToAbsolute(ph468601.pageX,ph468601.pageY); visibility='show';"></layer>
+<layer src="http://ad.doubleclick.net/adl/cxri.clarkhoward/clarkhoward;pg=/clarkhoward/privacy_policy.html;mkt=atl;sz=468x60;tile=7;ord=PPuGkwoAAHAAAG6XOwg?" width="468" height="60" visibility="hidden" onload="moveToAbsolute(ph468601.pageX,ph468601.pageY); visibility='show';"></layer>
  
 
 
