--- a/c/ci/cit/citysbest.com.html
+++ b/c/ci/cit/citysbest.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the citysbest.com privacy policy that was archived on 2001-02-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010202140300id_/http%3A//citysbest.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the citysbest.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603152247id_/http%3A//www.citysbest.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 	<title>CitysBest.com: Your Best Resource for Real Estate, Homes, and Property</title>
