--- a/a/ah/ahr/ahrq.gov.html
+++ b/a/ah/ahr/ahrq.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ahrq.gov privacy policy that was archived on 2001-04-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010404235032id_/http%3A//www.ahrq.gov/news/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ahrq.gov privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603152333id_/http%3A//ahrq.gov/news/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>AHRQ Privacy Policy Notice</title>
@@ -7,24 +7,23 @@
 </head>
 <body><font face="Arial, Helvetica, sans-serif">
 <h1>AHRQ Privacy Policy Notice</h1>
-<hr>
+<p></p><hr><p></p> 
 <p><i><b>Thank you for visiting the Agency for Healthcare Research and Quality (AHRQ) Web site and for reviewing our Privacy Policy.</b></i>
 </p><p>
 This Web site is maintained as a public service to provide information on healthcare research and quality from our Agency, a component of the U.S. Department of Health and Human Services. </p>
-<p>
-We collect <b>no</b> personal information about you when you visit our Web site unless you choose to provide that information to us. 
+<p>We collect <b>no</b> personal information about you when you visit our Web site unless you choose to provide that information to us. 
 </p>
-<hr>
+<p></p><hr><p></p>
 <h3>Information Automatically Collected and Stored</h3>
 <p>When you browse through any Web site, read pages, or download information, certain information about your visit can be collected. We automatically collect and temporarily store the following information about your visit, but this information does not identify you personally:</p> 
 
 <ul>
-<li>The name of the domain you use to access the Internet (for example, aol.com, if you are using an America Online account, or stanford.edu, if you are connecting from Stanford University's domain).
-</li><li>The type of browser and operating system you use to access our site.
-</li><li>The date and time of your visit.
-</li><li>The pages you visited.
-</li><li>The address of the Web site you came from, if you were referred from another site.
-</li></ul>
+<li>The name of the domain you use to access the Internet (for example, aol.com, if you are using an America Online account, or stanford.edu, if you are connecting from Stanford University's domain).</li>
+<li>The type of browser and operating system you use to access our site.</li>
+<li>The date and time of your visit.</li>
+<li>The pages you visited.</li>
+<li>The address of the Web site you came from, if you were referred from another site.</li>
+</ul>
 <p>
 We use this information for statistics on the traffic to our site, to find out about general user interest in various areas of our site, and to help us make our site more useful to visitors. </p>
 <p>
@@ -68,10 +67,12 @@ you link to another site, you are subject to the privacy policy of that site. </
 </p>
 
 <font face="Arial, Helvetica, sans-serif" size="2"><p><i>Current as of December 1999</i></p>
-<hr>
-
-</font><p><font face="Arial, Helvetica, sans-serif" size="2"><a href="/news/">News &amp; Information</a><br>
+<p></p><hr><p></p> 
+<p><a href="/news/">News &amp; Information</a><br>
 <a href="/">AHRQ Home Page</a><br>
-<a href="http://www.hhs.gov">Department of Health and Human Services</a></font></p>
+<a href="http://www.hhs.gov">Department of Health and Human Services</a></p></font>
+           <p></p><hr><p></p><font face="Arial, Helvetica, sans-serif" size="1">
+<p></p><center><a href="508web.htm">Accessibility</a> | <a href="/info/customer.htm">Contact Us</a> | <a href="policyix.htm#copyright">Copyright</a> | <a href="disclaim.htm">Disclaimers</a> | <a href="foia.htm">FOIA</a> | <a href="weblink.htm">Linking</a> | <a href="privacy.htm">Privacy Notice</a></center><p></p> 
+</font>
 
 </body></html>
