--- a/w/we/web/websitealive.com.html
+++ b/w/we/web/websitealive.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the websitealive.com privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217232033id_/http%3A//websitealive.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the websitealive.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603152340id_/http%3A//www.websitealive.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>WebsiteAlive - What? ... I Don't Believe! ... Its So Simple!</title>
