--- a/u/us/usc/uscav.com.html
+++ b/u/us/usc/uscav.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the uscav.com privacy policy that was archived on 2001-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011212155448id_/http%3A//www.uscav.com/uscprivacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the uscav.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603152854id_/http%3A//www.uscav.com/uscprivacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -50,7 +50,7 @@ function SpawnWindow(URL) {
 							</tr>
 							<tr>
 								<td align="center"><a href="http://www.uscav.com/shop/uscbasket.asp" class="blue8c">cart</a></td>
-								<td><a href="https://www.uscav.com/Shop/uscx_prepare.asp?ID=135869628" class="blue8c">checkout</a></td>
+								<td><a href="https://www.uscav.com/Shop/uscx_prepare.asp?ID=1051205291" class="blue8c">checkout</a></td>
 							</tr>
 						</tbody></table>
 					</td>
@@ -66,7 +66,7 @@ function SpawnWindow(URL) {
 				<tbody><tr>
 					<td align="center"><a href="http://www.uscav.com/index.asp" class="white9c"><b>HOME</b></a></td>
 					<td align="center"><b class="white9c">|</b></td>
-					<td align="center"><a href="http://www.uscav.com/Shop/uscnewcategories.asp" class="white9c"><b>WHAT'S NEW</b></a></td>
+					<td align="center"><a href="http://www.uscav.com/Shop/uscsearchresultsr.asp?search=newitems" class="white9c"><b>WHAT'S NEW</b></a></td>
 					<td align="center"><b class="white9c">|</b></td>
 					<td align="center"><a href="http://www.uscav.com/Shop/uscsearchresultsr.asp?search=wbspec" class="white9c"><b>SPECIALS</b></a></td>
 					<td align="center"><b class="white9c">|</b></td>
@@ -103,7 +103,7 @@ function SpawnWindow(URL) {
 				<tr><td class="brown10c">&nbsp;•&nbsp;<a href="http://www.uscav.com/categories/usc_knives.asp" class="blue9c"><b>Knives/Swords</b></a></td></tr>
 				<tr><td class="brown10c">&nbsp;•&nbsp;<a href="http://www.uscav.com/categories/usc_electronics.asp" class="blue9c"><b>Electronics/Optics</b></a></td></tr>
 				<tr><td class="brown10c">&nbsp;•&nbsp;<a href="http://www.uscav.com/categories/usc_novelty.asp" class="blue9c"><b>Gifts/Books/Videos</b></a></td></tr>
-				<tr><td class="brown10c">&nbsp;•&nbsp;<a href="http://www.uscav.com/Shop/uscgiftcertinfo.asp" class="blue9c"><b>Gift Certificates</b></a></td></tr>
+				<!--<tr><td class="brown10c">&nbsp;&#149;&nbsp;<a href="http://www.uscav.com/Shop/uscgiftcertinfo.asp" class=blue9c><b>Gift Certificates</b></a></td></tr>-->
 			</tbody></table>
 			<br>
 			<a href="javascript:Certify('http://www.bbbonline.org/cnfm.cfm?company=04061999014502');"><img src="/assets/images/privacyseal4.gif" width="110" height="39" border="0" alt="BBBOnLine Privacy Seal" vspace="2"></a><br><a href="http://www.uscav.com/uscprivacy.asp" class="blue9c"><b>Privacy &amp; Security</b></a>
@@ -112,12 +112,17 @@ function SpawnWindow(URL) {
 				<tbody><tr><td class="brown10c">&nbsp;•&nbsp;<a href="http://www.uscav.com/usccustomerservice.asp" class="blue9c"><b>Customer Service</b></a></td></tr>
 				<tr><td class="brown10c">&nbsp;•&nbsp;<a href="http://www.uscav.com/uscemailrequest.asp" class="blue9c"><b>Join USCAV e-news!</b></a></td></tr>
 				<tr><td class="brown10c">&nbsp;•&nbsp;<a href="http://www.uscav.com/usccjaffiliates.asp" class="blue9c"><b>Affiliate Program</b></a></td></tr>
-				<tr><td class="brown10c">&nbsp;•&nbsp;<a href="http://www.uscav.com/usccatalogr.asp" class="blue9c"><b>Catalog Request</b></a></td></tr>
+				<tr><td class="brown10c">&nbsp;•&nbsp;<a href="http://www.uscav.com/usccatalogr.asp" class="blue9c"><b>Mailing List</b></a></td></tr>
 				<tr><td class="brown10c">&nbsp;•&nbsp;<a href="http://www.uscav.com/usckystore.asp" class="blue9c"><b>USCAV Stores</b></a></td></tr>
 				<tr><td class="brown10c">&nbsp;•&nbsp;<a href="http://www.uscav.com/uscrefer.asp" class="blue9c"><b>Refer Us to a Friend</b></a></td></tr>
 			</tbody></table>
-			<br><a href="http://www.uscav.com/Shop/uscsearchresults.asp?ProdNameSelect=3&amp;ProdName=goretex&amp;title=GORE-TEX+Gear"><img src="/assets/images/gore-texlogo.gif" width="100" height="100" border="0" alt=""></a>
-			<br><br><a href="http://www.kieslersonline.com/index.asp?urlid=uscav"><img src="/images/110x51logo.gif" width="110" height="51" border="0" alt="Kiesler's Online - Shooting Sports Specialists"></a>
+			<br><a href="http://www.uscav.com/Shop/uscsearchresultsr.asp?search=goretex"><img src="/assets/images/gore-texlogo.gif" width="100" height="100" border="0" alt=""></a>
+			<br><br>
+
+			<a href="http://www.qksrv.net/click-312600-7271372" target="_top" onmouseover="window.status='http://www.kieslersonline.com';return true;" onmouseout="window.status=' ';return true;"><img src="/images/110x51logo.gif" width="110" height="51" border="0" alt="Kiesler's Online - Shooting Sports Specialists"></a>
+			<!--
+			<a href="http://www.uscav.com/redirect/commandoproknvs.html"><img src="/banners/commandoknifeset.gif" alt="" border="0"></a>
+			-->
 			<br><br><a href="http://cavpro.com/shop/cpindex.asp?urlid=fromuscav"><img src="/assets/images/uscavcpbanner2.gif" width="100" height="110" border="0" alt="cavpro.com"></a>
 			<br><br><span class="blk9c">Our Export Division</span><br><a href="http://www.csgshq.com" class="blue9c"><img src="/images/Csg&amp;swlogo.gif" width="110" height="75" border="0" alt=""></a><br><br>
 		</td>
@@ -234,7 +239,7 @@ function SpawnWindow(URL) {
 <td width="2" bgcolor="#584231"><img src="../images/BOX.gif" width="1" height="1" border="0" alt=""></td>
 <td valign="top" align="right" width="466" bgcolor="#f7f7f7">
 	<p>&nbsp;
-<table width="440" cellpadding="2" border="0" cellspacing="0">
+<table width="450" cellpadding="2" border="0" cellspacing="0">
 	<tbody><tr><td colspan="2"><img src="../Assets/images/browndot.gif" vspace="5" width="440" height="2" alt=""></td></tr>
 	<tr>
 		<td colspan="2"><br><span class="gray9c">To contact us with questions or problems with our site, order inquiries, product information requests, or any other questions, please visit our <a href="../uschowtocontactus.asp">Help Desk</a>.<br>&nbsp;</span></td>
@@ -243,8 +248,8 @@ function SpawnWindow(URL) {
 	<tr>
 		<td valign="top"><a href="http://www.uscav.com"><b class="blue10c">U. S. Cavalry</b></a><span class="gray9c"><br>2855 Centennial Ave.<br>Radcliff, KY 40160<br><b class="red12c">1-800-777-7172<br>1-270-351-1164</b></span></td>
 		<td align="right" valign="top" class="gray9c">
-			 Wednesday, December 12, 2001<br>10:51:23 AM EST
-			 <p>Copyright © 2001
+			 Monday, June 03, 2002<br>11:24:09 AM EST
+			 <p>Copyright © 2002
 		</p></td>
 	</tr>
 </tbody></table>
